Fix T55186: Circle and Lasso select were not working on Pose Bones

These needed to be using the COW evaluated data, instead of the raw bone
positions.

All other datatypes still need converting to work with this though.